--- a/KGERP/Views/BillRequisition/CostCenterManagerMap.cshtml
+++ b/KGERP/Views/BillRequisition/CostCenterManagerMap.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KGERP.Service.ServiceModel.CostCenterManagerMapModel
 
 @{
-    ViewData["Title"] = "Project Manager Map";
+    ViewData["Title"] = "Project Manager Assign";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <style type="text/css">
@@ -15,19 +15,19 @@
         @if (Model.CostCenterManagerMapId > 0)
         {
             <span>
-                Project Manager Map
+                Project Manager Assign
             </span>
         }
         else
         {
-            <span>
-                Project Manager Map
-            </span>
+    <span>
+        Project Manager Assign
+    </span>
         }
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Project Manager Map</li>
+        <li class="active">Project Manager Assign</li>
     </ol>
 
 </section>
