--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -95,7 +95,7 @@
                                     </tr>
 
                                     <tr>
-                                        <th>Remarks</th>
+                                        <th>Work Detail/ Note</th>
                                         <th>:</th>
                                         <td>@Model.Description</td>
 
