--- a/KGERP/Views/BillRequisition/BillRequisitionMasterList.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterList.cshtml
@@ -18,7 +18,7 @@
 <section class="content-header">
     <h1>
         <span>
-            Bill Requisition List
+           Requisition List
         </span>
 
     </h1>
