--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -125,7 +125,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Select Requisition Type :</label>
-                                            @Html.DropDownListFor(model => model.BillRequisitionTypeId, Model.RequisitionTypeList as SelectList, "===Select Requisition Type===", new { id = "ddlBRTypeId", @class = "form-control searchingDropdown", style = "width:100%", required = "required" })
+                                            @Html.DropDownListFor(model => model.BillRequisitionTypeId, Model.RequisitionTypeList as SelectList, "===Select Requisition Type===", new { id = "ddlBRTypeId", onchange = "general()", @class = "form-control searchingDropdown", style = "width:100%", required = "required" })
                                             @Html.ValidationMessageFor(model => model.BillRequisitionTypeId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
@@ -279,9 +279,33 @@
                                         </div>
                                     </div>
                                 }
+
                                 <!--- dependable input with value -->
 
-                                <div class="row">
+                                <div class="row hidden" id="itEquipment">
+                                    @if (Model.BillRequisitionTypeId == 5)
+                                    {
+                                        <div class="col-md-3">
+                                            <div class="form-group">
+                                                <label>Material Demand :</label>
+                                                @Html.TextBoxFor(model => model.DetailModel.DemandQty, new { id = "decDemandQtyIt", type = "number", step = "0.01", @class = "form-control", placeholder = "Material demand" })
+                                                @Html.ValidationMessageFor(model => model.DetailModel.DemandQty, "", new { @class = "text-danger" })
+
+                                                @Html.HiddenFor(model => model.DetailModel.ProductId, new { @value = 111 })
+                                                @Html.HiddenFor(model => model.DetailModel.UnitId, new { @value = 111 })
+                                                @Html.HiddenFor(model => model.DetailModel.EstimatedQty, new { @value = 111 })
+                                                @Html.HiddenFor(model => model.DetailModel.ReceivedSoFar, new { @value = 111 })
+                                                @Html.HiddenFor(model => model.DetailModel.RemainingQty, new { @value = 111 })
+                                                @Html.HiddenFor(model => model.DetailModel.UnitRate, new { @value = 111 })
+                                                @Html.HiddenFor(model => model.DetailModel.TotalPrice, new { @value = 111 })
+                                                @Html.HiddenFor(model => model.DetailModel.Remarks, new { @value = "" })
+
+                                            </div>
+                                        </div>
+                                    }
+                                </div>
+
+                                <div class="row " id="general">
 
                                     <div class="col-md-3">
                                         <div class="form-group">
@@ -861,7 +885,26 @@
                 TotalPriceInputValue.val(result);
             }
         }
-        
+
+        function general() {
+            var ItEquipment = document.getElementById("itEquipment");
+            var General = document.getElementById("general");
+            var projectType = $('#ddlBRTypeId').val();
+
+            if (projectType === '5') {
+                ItEquipment.classList.remove("hidden");
+                ItEquipment.classList.add("block");
+                General.classList.add("hidden");
+            }
+            else {
+                ItEquipment.classList.remove("block");
+                ItEquipment.classList.add("hidden");
+
+                General.classList.remove("hidden");
+                General.classList.add("block");
+            }
+        }
+
         $(document).ready(function () {
             'use strict';
 
